# protection_model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
base/: access_right.py
protection_model/base/: access_right.py  constants.py
protection_model/linux/: access_rights.py
protection_model/linux/utilities/: set_up_access_rights.py
protection_model/sel4cp/: access_rights.py  constants.py
protection_model/sel4cp/utilities/: access_rights_parser.py  access_rights_prompter.py  set_up_access_rights.py  system_parser.py
protection_model/utilities/: elf_patcher.py  serialization.py
sel4cp/: access_rights.py
utilities/: serialization.py
